--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
 
                 <!-- 右側：自己紹介 -->
                 <p style="flex: 1; margin: 0;">
-                    <strong>おはぴょん🐇❤どうも、博兎ライです！</strong><br>
+                    <strong>おはぴょん🐰❤どうも、博兎ライです！</strong><br>
                     ゲーム配信やお絵描き、まったり雑談などを中心に活動しています。<br>
                     落ち着いた空間を届けられるように、配信もゆるやかに進めています✨
                 </p>
