--- a/request_mobile.html
+++ b/request_mobile.html
@@ -286,8 +286,8 @@
             <div class="menu-card">
                 <img src="TRPG.png" alt="model sample">
                 <h3>TRPG立ち絵</h3>
-                <p>商用利用なし¥1,000</p>
-                <p>商用利用あり¥3,000</p>
+                <p>個人利用¥3,000</p>
+                <p>配信/投稿利用¥51,000</p>
                 <div class="btn-group">
                     <button class="button" onclick="showSamples('trpg')">実績を見る</button>
                     <a href="https://skima.jp/item/detail?item_id=305036&sh=1OmsxuZ" target="_blank" class="button">依頼する</a>
@@ -407,4 +407,5 @@
     </script>
 </body>
 </html>
+
 
