--- a/request.html
+++ b/request.html
@@ -263,7 +263,7 @@
             <div class="menu-card">
                 <img src="TRPG.png" alt="model sample">
                 <h3>TRPG立ち絵</h3>
-                <p>商用利用なし¥1,000　商用利用あり¥3,000</p>
+                <p>個人利用¥3,000　配信/投稿利用¥51,000</p>
                 <div class="btn-group">
                     <button class="button" onclick="showSamples('vtuber')">実績を見る</button>
                     <a href="https://skima.jp/item/detail?item_id=305036&sh=1OmsxuZ" target="_blank" class="button">依頼する</a>
@@ -558,4 +558,5 @@
 
 </body>
 </html>
+
 
